# agentic-code-fixer

./: LICENSE  README.md  TODO.md  __init__.py  cli.py  coordinator.py  debug_ast_lines.py  debug_exact_issue.py  debug_exact_scenario.py  debug_newline_issue.py  debug_patch_issue.py  debug_real_file.py  debug_replacement_logic.py  debug_rstrip_issue.py  debug_selective_testing.py  debug_selective_testing_detailed.py  debug_slicing_issue.py  debug_verification_issue.py  display_patches.py  opencode_client.py  pyproject.toml  test-math-config.yaml  test_selective_config.yaml  test_selective_manual.py
agents/: __init__.py  agent_orchestrator.py  opencode_agent.py
config/: basic_config.yaml
core/: __init__.py  config.py  lsp_analyzer.py  patch_validator.py  path_utils.py  pattern_utils.py  role_manager.py  test_pattern_utils.py  types.py
evaluation/: __init__.py  elo_ranker.py  patch_evaluator.py
examples/: advanced_config.yaml  basic_config.yaml  javascript_config.yaml
experiment_logging/: __init__.py  experiment_logger.py  report_generator.py
indexing/: __init__.py  code_indexer.py  vector_store.py
logging/: experiment_logger.py  report_generator.py
operations/: __init__.py  file_operations.py
patching/: __init__.py  patch_applicator.py  patch_manager.py
roles/: README.md  ai_ml.yaml  concurrency.yaml  database.yaml  framework.yaml  general.yaml  performance.yaml  reliability.yaml  security.yaml  testing.yaml
testing/: test_selector.py
tests/: __init__.py  test_file_operations.py  test_patch_isolation.py  test_patch_line_ranges.py  (+1 more)
(+58 files in other folders)
